--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,15 @@
 @layer base {
   html, body {
     height: 100%;
-    overflow: auto;
+    width: 100%;
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+    overflow-y: auto;
+  }
+  
+  #__next {
+    height: 100%;
+    width: 100%;
   }
 }
